--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,34 @@
 Package: unhcrdataportal
-Version: 0.0.0.9000
 Title: Retrieve Data From UNHCR Data Portal
+Version: 0.0.0.9000
+Authors@R: c(
+    person("Hisham", "Galal", , "galalh@unhcr.org", role = c("aut", "cre")),
+    person("Edouard", "Legoupil", , "legoupil@unhcr.org", role = "aut")
+  )
 Description: Use a function to retrieve the catalog / data in the system.
-Authors@R: c(person(given = "Hisham",
-         family = "Galal",
-         role = c("aut", "cre"),
-         email = "galalh@unhcr.org"),
-  person(given = "Edouard",
-         family = "Legoupil",
-         role = "aut",
-         email = "legoupil@unhcr.org"))
 License: MIT + file LICENSE
+Imports: 
+    dplyr,
+    DT,
+    ggplot2,
+    glue,
+    httr,
+    jsonlite,
+    purrr,
+    rvest,
+    scales,
+    shiny,
+    stats,
+    stringr,
+    tibble,
+    tidyr,
+    unhcrthemes
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat
+VignetteBuilder: 
+    knitr
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
